--- a/main.ipynb
+++ b/main.ipynb
@@ -916,7 +916,7 @@
    "execution_count": 11,
    "id": "56ba0f3f",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2379,8 +2379,8 @@
     "# read vocabulary and mapping from 2.1\n",
     "# vocabulary: trimmed word -> int\n",
     "# mapping: int -> page_site/place_name (, freq_id)\n",
-    "# while reading the vocabulary is reliable the mapping is not conserved, recommend to rerun mapping and mapping_tfidf\n",
-    "\n",
+    "# while reading the vocabulary is reliable the mapping is not conserved, recommend to rerun mapping and mapping_tfidf if reopen notebook\n",
+    "'''\n",
     "import csv\n",
     "import sys\n",
     "\n",
@@ -2397,7 +2397,7 @@
     "with open(\"termid_document_freq.csv\", \"r\", encoding = 'utf-8') as infile3:\n",
     "    reader3 = csv.reader(infile3)\n",
     "    mapping_tfidf = {int(rows[0]): list(rows[1].replace('[', '').replace(']', '').replace(\"'\", '').replace('),', ')),').split('),')) for rows in reader3}\n",
-    "    "
+    "'''"
    ]
   },
   {
@@ -10174,7 +10174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
