--- a/main.ipynb
+++ b/main.ipynb
@@ -8959,6 +8959,83 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4e2ae83d",
+   "metadata": {},
+   "source": [
+    "# 5. Bonus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5490f75d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What do you want to do?\n",
+      "1-Define new parameters\n",
+      "2-Define users\n",
+      "3-specify tags\n",
+      "4-filter based on visitors\n",
+      "5-specify list names\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"What do you want to do?\\n1-Define new parameters\\n2-Define users\\n3-specify tags\\n4-filter based on visitors\\n5-specify list names\")\n",
+    "query = str(input())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "522e7c66",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if query == 1:\n",
+    "    \"Do you want to define new parameteres? yes/no\"\n",
+    "    ans = str(input())\n",
+    "    if ans == yes:\n",
+    "        print(\"Place name\")\n",
+    "        name = description_to_stems(str(input()))\n",
+    "        print(\"Address\")\n",
+    "        address = description_to_stems(str(input()))\n",
+    "        print(\"Description\")\n",
+    "        desc = description_to_stems(str(input()))\n",
+    "    \n",
+    "    desc = ' '.join(description_to_stems(desc) )\n",
+    "    matches = docs_matching_query(desc)\n",
+    "\n",
+    "    for match in matches:\n",
+    "        match_split = match.split(\"/\")\n",
+    "        with open ('./tsvs/tsvs_page_{}/{}'.format(match_split[0], match_split[1]), 'r', encoding =\"utf-8\") as f:\n",
+    "            tsv_reader = list(csv.reader(f, delimiter=\"\\t\"))[0]\n",
+    "            if address in tsv_reader[-8] and name in tsv_reader[0]:\n",
+    "                print(match)\n",
+    "                \n",
+    "elif query == 3:\n",
+    "    print(\"Define tags! Separate them by a comma\")\n",
+    "    tags = str(input()).split(\",\")\n",
+    "    \n",
+    "    s = set()\n",
+    "    \n",
+    "    for t in tags:\n",
+    "        matches = docs_matching_query(t)\n",
+    "        match_split = match.split(\"/\")\n",
+    "        for match in matches:\n",
+    "            with open ('./tsvs/tsvs_page_{}/{}'.format(match_split[0], match_split[1]), 'r', encoding =\"utf-8\") as f:\n",
+    "                tsv_reader = list(csv.reader(f, delimiter=\"\\t\"))[0]\n",
+    "                if t in tsv_reader[1]:\n",
+    "                    s.append(match)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e202ecd",
    "metadata": {},
    "source": [
@@ -10174,7 +10251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
